# tg

./: README.md  allman  meson.build  meson_options.txt
documentation/man/man1/: tg.1
include/: tg.h
src/: main.c  tg.c
